crates/apollo-compiler/test_data/diagnostics/0124_conditional_subscriptions_inside_named_fragment.txt
Error: subscription `ConditionalInlineSub` can not specify @skip or @include on root fields
   ╭─[ 0124_conditional_subscriptions_inside_named_fragment.graphql:6:12 ]
   │
 6 │     ticker @include(if: $condition)
   │            ────────────┬───────────  
   │                        ╰───────────── conditional directive used here
───╯

